# cookie-stand-api

./: README.md  pyproject.toml
cookie_stand/: db.sqlite3  manage.py
cookie_stand/cookie_admin/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
cookie_stand/cookie_admin/migrations/: 0001_initial.py
cookie_stand/cookie_stand/: .env  .env.sample  asgi.py  settings.py  urls.py  wsgi.py
