[tool.poetry]
name = "cookie-stand-api"
version = "0.1.0"
description = ""
authors = ["mhmad wrekat <mhmmadwreekkat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
psycopg2-binary = "^2.9.2"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
djangorestframework = "^3.13.1"
pytz = "^2021.3"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
